--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "4.0.0-rc.0",
+  "version": "5.0.0-rc.0",
   "description": "An implementation of nvD3 for Ontimize Web",
   "scripts": {
     "clean": "o-ngx-lib-builder clean",
@@ -27,7 +27,7 @@
   "typings": "./index.d.ts",
   "dependencies": {
     "d3": "3.5.17",
-    "ontimize-web-ngx-nvd3": "file:C:\\workspace\\github\\CHARTS\\ontimize-web-ngx-nvd3\\ontimize-web-ngx-nvd3-4.0.0-rc.0.tgz",
+    "ontimize-web-ngx-nvd3": "D:\\angular 6\\ontimize-web-ngx-nvd3\\ontimize-web-ngx-nvd3-5.0.0-rc.0.tgz",
     "nvd3": "1.8.6"
   },
   "peerDependencies": {
@@ -36,44 +36,44 @@
     "moment": "2.22.2"
   },
   "devDependencies": {
-    "ontimize-web-ngx": "file:C:\\workspace\\github\\ontimize-web-ng2-VERSIONS\\4.0.0-rc.0\\ontimize-web-ngx\\dist\\ontimize-web-ngx-4.0.0-rc.0.tgz",
-    "ontimize-web-ngx-library-tools": "file:C:\\workspace\\github\\TOOLS\\ontimize-web-ngx-library-tools\\ontimize-web-ngx-library-tools-4.0.0-rc.0.tgz",
-    "@angular/flex-layout": "6.0.0-beta.18",
-    "@angular/material": "6.4.7",
-    "@angular/material-moment-adapter": "6.4.7",
-    "@angular/animations": "6.1.10",
-    "@angular/cdk": "6.4.7",
-    "@angular/common": "6.1.10",
-    "@angular/compiler": "6.1.10",
-    "@angular/compiler-cli": "6.1.10",
-    "@angular/core": "6.1.10",
-    "@angular/forms": "6.1.10",
-    "@angular/http": "6.1.10",
-    "@angular/platform-browser": "6.1.10",
-    "@angular/platform-browser-dynamic": "6.1.10",
-    "@angular/platform-server": "6.1.10",
-    "@angular/router": "6.1.10",
-    "@angular/upgrade": "6.1.10",
-    "@ngx-translate/core": "10.0.2",
-    "@ngx-translate/http-loader": "3.0.1",
+    "ontimize-web-ngx": "D:\\angular 6\\ontimize-web-ngx\\dist\\ontimize-web-ngx-5.0.0-rc.0.tgz",
+    "ontimize-web-ngx-library-tools": "C:\\Users\\patricia.martinez\\Documents\\ontimize web\\ontimize-web-ngx-library-tools\\ontimize-web-ngx-library-tools-5.0.0-rc.0.tgz",
+    "@angular/flex-layout": "7.0.0-beta.19",
+    "@angular/material": "7.0.3",
+    "@angular/material-moment-adapter": "7.0.3",
+    "@angular/animations": "7.0.2",
+    "@angular/cdk": "7.0.3",
+    "@angular/common": "7.0.2",
+    "@angular/compiler": "7.0.2",
+    "@angular/compiler-cli": "7.0.2",
+    "@angular/core": "7.0.2",
+    "@angular/forms": "7.0.2",
+    "@angular/http": "7.0.2",
+    "@angular/platform-browser": "7.0.2",
+    "@angular/platform-browser-dynamic": "7.0.2",
+    "@angular/platform-server": "7.0.2",
+    "@angular/router": "7.0.2",
+    "@angular/upgrade": "7.0.2",
+    "@ngx-translate/core": "11.0.0",
+    "@ngx-translate/http-loader": "4.0.0",
     "core-js": "2.5.7",
     "rxjs": "6.3.3",
     "zone.js": "0.8.26",
     "reflect-metadata": "0.1.12",
-    "typescript": "2.9.2",
-    "@types/hammerjs": "2.0.34",
-    "@types/jasmine": "2.5.46",
-    "@types/node": "7.0.10",
-    "@types/uglify-js": "2.6.30",
-    "@types/webpack": "4.1.1",
-    "ajv": "6.5.4",
-    "node-sass": "4.9.4",
+    "typescript": "3.1.6",
+    "@types/hammerjs": "2.0.36",
+    "@types/jasmine": "2.8.11",
+    "@types/node": "10.12.3",
+    "@types/uglify-js": "3.0.4",
+    "@types/webpack": "4.4.17",
+    "ajv": "6.5.5",
+    "node-sass": "4.10.0",
     "rimraf": "2.6.2",
     "gulp": "4.0.0",
-    "gulp-cssimport": "6.0.0",
+    "gulp-cssimport": "7.0.0",
     "gulp-inline-ng2-template": "5.0.1",
-    "gulp-replace": "0.6.1",
-    "copyfiles": "1.2.0",
-    "webpack": "4.21.0"
+    "gulp-replace": "1.0.0",
+    "copyfiles": "2.1.0",
+    "webpack": "4.25.1"
   }
 }
