--- a/package.json
+++ b/package.json
@@ -34,27 +34,28 @@
     "rxjs": "6.3.3",
     "zone.js": "0.8.26",
     "reflect-metadata": "0.1.12",
-    "angular2-highlight-js": "5.0.1",
     "ontimize-web-ngx": "4.0.0-rc.1",
     "ontimize-web-ngx-charts": "4.0.0-rc.1",
-    "ontimize-web-ngx-theming": "4.0.0-rc.1"
+    "ontimize-web-ngx-theming": "4.0.0-rc.1",
+    "classlist.js": "^1.1.20150312",
+    "intl": "^1.2.5",
+    "web-animations-js": "^2.3.1",
+    "angular2-highlight-js": "5.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular-devkit/build-angular": "~0.8.0",
     "@angular/cli": "6.2.6",
     "@angular/compiler-cli": "6.1.10",
-    "@ngtools/webpack": "6.1.5",
-    "@types/jasmine": "2.5.46",
-    "@types/node": "7.0.10",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "~6.0.60",
     "compression-webpack-plugin": "1.1.12",
-    "flag-icon-css": "2.9.0",
-    "html-webpack-plugin": "3.2.0",
-    "jasmine-spec-reporter": "~3.2.0",
+    "copy-webpack-plugin": "4.5.4",
+    "html-webpack-plugin": "4.0.0-beta.2",
     "node-sass": "4.9.4",
     "ontimize-web-ngx-tools": "4.0.0-rc.0",
     "ts-node": "~2.0.0",
     "typescript": "2.9.2",
-    "webpack": "4.21.0",
+    "webpack": "4.18.0",
     "webpack-cli": "3.1.0"
   }
 }
