--- a/tsconfig.aot.json
+++ b/tsconfig.aot.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
-    "strictPropertyInitialization": false,
-    "types": [
-      "node"
-    ],
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -14,8 +10,8 @@
     "sourceMap": true,
     "suppressImplicitAnyIndexErrors": true,
     "lib": [
-      "dom",
-      "es6"
+      "es2015",
+      "dom"
     ],
     "baseUrl": "tmp-src",
     "typeRoots": [
