--- a/package.json
+++ b/package.json
@@ -11,77 +11,55 @@
   },
   "private": true,
   "dependencies": {
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/flex-layout": "~8.0.0-beta.27",
+    "@angular/forms": "~8.2.14",
+    "@angular/material": "~8.2.3",
+    "@angular/material-moment-adapter": "~8.2.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@ngx-translate/core": "~11.0.1",
+    "@ngx-translate/http-loader": "~4.0.0",
     "d3": "3.5.17",
+    "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
-    "ontimize-web-ngx-nvd3": "4.0.1"
+    "ontimize-web-ngx": "file:C:/workspaces/ontimizeWeb/v8/ontimize-web-ngx/dist/ontimize-web-ngx/ontimize-web-ngx-8.0.0.tgz",
+    "ontimize-web-ngx-nvd3": "4.0.1",
+    "rxjs": "~6.4.0",
+    "tslib": "~1.10.0",
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.22",
     "@angular-devkit/build-ng-packagr": "~0.803.22",
     "@angular-devkit/build-optimizer": "~0.803.23",
-    "@angular/animations": "~8.2.8",
-    "@angular/cdk": "8.2.3",
     "@angular/cli": "~8.3.21",
-    "@angular/common": "~8.2.8",
-    "@angular/compiler": "8.2.14",
     "@angular/compiler-cli": "~8.2.14",
-    "@angular/core": "~8.2.8",
-    "@angular/flex-layout": "8.0.0-beta.27",
-    "@angular/forms": "8.2.14",
-    "@angular/http": "6.1.10",
-    "@angular/language-service": "~8.2.8",
-    "@angular/material": "8.2.3",
-    "@angular/material-moment-adapter": "8.2.3",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/router": "8.2.14",
-    "@angular/upgrade": "8.2.14",
-    "@ngx-translate/core": "^12.1.1",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "@types/hammerjs": "2.0.34",
+    "@angular/language-service": "~8.2.14",
+    "@types/hammerjs": "~2.0.36",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "@types/uglify-js": "2.6.30",
-    "@types/webpack": "4.1.1",
-    "ajv": "^6.9.1",
-    "awesome-typescript-loader": "^2.2.1",
-    "braces": "2.3.1",
-    "codelyzer": "^5.0.0",
-    "copyfiles": "1.2.0",
-    "core-js": "2.5.7",
-    "fstream": "1.0.12",
-    "gulp": "4.0.0",
-    "gulp-cssimport": "6.0.0",
-    "gulp-inline-ng2-template": "5.0.1",
-    "gulp-replace": "0.6.1",
-    "jasmine-core": "~3.4.0",
+    "codelyzer": "5.2.1",
+    "copyfiles": "~2.2.0",
+    "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "lodash.template": ">=4.5.0",
-    "ng-packagr": "^4.7.1",
-    "node-sass": "4.9.4",
-    "ontimize-web-ngx": "file:ontimize-web-ngx-8.0.0.tgz",
-    "ontimize-web-ngx-library-tools": "4.0.2",
+    "karma-jasmine-html-reporter": "~1.4.0",
+    "ng-packagr": "4.1.0",
     "protractor": "~5.4.0",
-    "randomatic": "3.0.0",
-    "reflect-metadata": "0.1.12",
-    "rimraf": "2.6.2",
-    "rxjs": "6.3.3",
-    "serialize-javascript": ">=2.1.1",
+    "scss-bundle": "3.1.1",
     "ts-node": "~7.0.0",
-    "tsickle": "^0.37.0",
+    "tsickle": "~0.37.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "webpack": "4.21.0",
-    "zone.js": "0.8.26"
+    "typescript": "~3.5.3"
   }
 }
