--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -1,57 +1,12 @@
 {
   "name": "ontimize-web-ngx-charts",
   "version": "8.0.0",
-  "peerDependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14"
-  },
   "dependencies": {
     "d3": "3.5.17",
     "nvd3": "1.8.6",
     "ontimize-web-ngx-nvd3": "4.0.1"
   },
-  "devDependencies": {
-    "ontimize-web-ngx": "file:ontimize-web-ngx-8.0.0.tgz",
-    "ontimize-web-ngx-library-tools": "4.0.2",
-    "@angular/material": "8.2.3",
-    "@angular/material-moment-adapter": "8.2.3",
-    "@angular/animations": "8.2.14",
-    "@angular/cdk": "8.2.3",
-    "@angular/compiler": "8.2.14",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/http": "6.1.10",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/platform-server": "^8.2.14",
-    "@angular/router": "8.2.14",
-    "@angular/upgrade": "8.2.14",
-    "@ngx-translate/core": "^12.1.1",
-    "@ngx-translate/http-loader": "^4.0.0",
-    "core-js": "2.5.7",
-    "fstream": "1.0.12",
-    "rxjs": "6.3.3",
-    "zone.js": "0.8.26",
-    "reflect-metadata": "0.1.12",
-    "typescript": "2.9.2",
-    "@types/hammerjs": "2.0.34",
-    "@types/jasmine": "2.5.46",
-    "@types/node": "7.0.10",
-    "@types/uglify-js": "2.6.30",
-    "@types/webpack": "4.1.1",
-    "ajv": "6.5.4",
-    "node-sass": "4.9.4",
-    "@ng-packagr": "4.7.1",
-    "randomatic": "3.0.0",
-    "rimraf": "2.6.2",
-    "gulp": "4.0.0",
-    "gulp-cssimport": "6.0.0",
-    "gulp-inline-ng2-template": "5.0.1",
-    "gulp-replace": "0.6.1",
-    "copyfiles": "1.2.0",
-    "webpack": "4.21.0",
-    "braces": "2.3.1",
-    "lodash.template": ">=4.5.0",
-    "serialize-javascript": ">=2.1.1"
+  "peerDependencies": {
+    "ontimize-web-ngx": "8.0.0"
   }
 }
