--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "d3": "3.5.17",
     "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
-    "ontimize-web-ngx": "file:C:/workspaces/ontimizeWeb/v8/ontimize-web-ngx/dist/ontimize-web-ngx/ontimize-web-ngx-8.0.0.tgz",
+    "ontimize-web-ngx": "file: ontimize-web-ngx-8.0.0.tgz",
     "ontimize-web-ngx-nvd3": "4.0.1",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
