--- a/package.json
+++ b/package.json
@@ -13,49 +13,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.10",
-    "@angular/cdk": "6.4.7",
-    "@angular/common": "6.1.10",
-    "@angular/compiler": "6.1.10",
-    "@angular/core": "6.1.10",
-    "@angular/flex-layout": "6.0.0-beta.18",
-    "@angular/forms": "6.1.10",
-    "@angular/http": "6.1.10",
-    "@angular/material": "6.4.7",
-    "@angular/material-moment-adapter": "6.4.7",
-    "@angular/platform-browser": "6.1.10",
-    "@angular/platform-browser-dynamic": "6.1.10",
-    "@angular/platform-server": "6.1.10",
-    "@angular/router": "6.1.10",
-    "@angular/upgrade": "6.1.10",
+    "@angular/animations": "8.2.8",
+    "@angular/cdk": "8.2.3",
+    "@angular/common": "8.2.8",
+    "@angular/compiler": "8.2.8",
+    "@angular/core": "8.2.8",
+    "@angular/flex-layout": "8.0.0-beta.27",
+    "@angular/forms": "8.2.8",
+    "@angular/material": "8.2.3",
+    "@angular/material-moment-adapter": "8.2.3",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.8",
+    "@angular/platform-server": "8.2.8",
+    "@angular/router": "8.2.8",
+    "@angular/upgrade": "8.2.8",
     "@ngx-translate/core": "10.0.2",
     "@ngx-translate/http-loader": "3.0.1",
-    "core-js": "2.5.7",
-    "rxjs": "6.3.3",
-    "zone.js": "0.8.26",
+    "core-js": "3.6.4",
+    "rxjs": "6.5.5",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.9.1",
     "reflect-metadata": "0.1.12",
-    "ontimize-web-ngx": "4.0.7",
-    "ontimize-web-ngx-charts": "4.0.4",
+    "ontimize-web-ngx": "file:ontimize-web-ngx-8.0.0.tgz",
+    "ontimize-web-ngx-charts": "file:ontimize-web-ngx-charts-8.0.0.tgz",
     "ontimize-web-ngx-theming": "4.0.2",
     "classlist.js": "^1.1.20150312",
     "intl": "^1.2.5",
-    "web-animations-js": "^2.3.1",
+    "web-animations-js": "^2.3.2",
     "angular2-highlight-js": "5.0.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "6.2.6",
-    "@angular/compiler-cli": "6.1.10",
+    "@angular-devkit/build-angular": "~0.803.25",
+    "@angular/cli": "8.3.26",
+    "@angular/compiler-cli": "8.2.8",
+    "@angular/http": "^7.2.16",
     "@types/jasmine": "2.5.38",
-    "@types/node": "~6.0.60",
+    "@types/node": "8.9.4",
+    "codelyzer": "^5.0.1",
     "compression-webpack-plugin": "1.1.12",
     "copy-webpack-plugin": "4.5.4",
     "html-webpack-plugin": "4.0.0-beta.2",
     "node-sass": "4.9.4",
     "ontimize-web-ngx-tools": "4.0.0",
     "ts-node": "~2.0.0",
-    "typescript": "2.9.2",
-    "webpack": "4.18.0",
-    "webpack-cli": "3.1.0"
+    "typescript": "3.5.3"
   }
 }
