--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && scss-bundle -c scss-bundle-ontimize-charts.config.json && cd dist/ontimize-web-ngx-charts && npm pack",
+    "build": "ng build && scss-bundle -c scss-bundle-ontimize-charts.config.json",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -28,7 +28,7 @@
     "d3": "5.16.0",
     "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
-    "ontimize-web-ngx": "file:ontimize-web-ngx-8.0.0.tgz",
+    "ontimize-web-ngx": "8.0.0-SNAPSHOT-0",
     "ontimize-web-ngx-nvd3": "4.0.1",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
