--- a/scss-bundle-ontimize-charts.config.json
+++ b/scss-bundle-ontimize-charts.config.json
@@ -2,7 +2,7 @@
   "bundlerOptions": {
     "entryFile": "./projects/ontimize-web-ngx-charts/styles.scss",
     "rootDir": "./projects/ontimize-web-ngx-charts/src/lib/components/",
-    "outFile": "./dist/ontimize-web-ngx-charts/styles.scss",
+    "outFile": "./dist/styles.scss",
     "logLevel": "trace"
   }
 }
