--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "production": "ng build --prod=true --baseHref==/ontimize-web-ngx-quickstart-charts/",
-    "production-aot-server": "ng build --prod=true --baseHref=/"
+    "production-aot-server": "ng build --prod=true --baseHref=/ontimizeweb/v8/charts/"
   },
   "private": true,
   "dependencies": {
