--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "8.0.0-SNAPSHOT-0",
+  "version": "8.0.0-rc.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -28,7 +28,7 @@
     "d3": "5.16.0",
     "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
-    "ontimize-web-ngx": "8.0.0-SNAPSHOT-0",
+    "ontimize-web-ngx": "file:C:\\workspace\\ontimizeWeb\\8.x.x\\ontimize-web-ngx\\dist\\ontimize-web-ngx-8.0.0-SNAPSHOT-0.tgz",
     "ontimize-web-ngx-nvd3": "4.0.1",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
