--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "8.0.0-SNAPSHOT-0",
+  "version": "8.0.0-rc.0",
   "dependencies": {
     "d3": "3.5.17",
     "nvd3": "1.8.6",
     "ontimize-web-ngx-nvd3": "4.0.1"
   },
   "peerDependencies": {
-    "ontimize-web-ngx": "8.0.0"
+    "ontimize-web-ngx": "8.0.0-rc.0"
   }
 }
