--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "@ngx-translate/core": "~11.0.1",
-    "@ngx-translate/http-loader": "~4.0.0",
     "d3": "5.16.0",
     "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
-    "ontimize-web-ngx": "file:C:\\workspace\\ontimizeWeb\\8.x.x\\ontimize-web-ngx\\dist\\ontimize-web-ngx-8.0.0-SNAPSHOT-0.tgz",
+    "ontimize-web-ngx": "8.0.0-rc.0",
     "ontimize-web-ngx-nvd3": "4.0.1",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
