--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1",
     "reflect-metadata": "0.1.12",
-    "ontimize-web-ngx": "8.0.0-rc.0",
+    "ontimize-web-ngx": "file:ontimize-web-ngx-8.0.0-rc.0.tgz",
     "ontimize-web-ngx-charts": "8.0.0-rc.0",
     "ontimize-web-ngx-theming": "4.0.2",
     "classlist.js": "^1.1.20150312",
