--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
     "ontimize-web-ngx": "8.0.0-rc.0",
-    "ontimize-web-ngx-nvd3": "4.0.1",
+    "ontimize-web-ngx-nvd3": "8.0.0-SNAPSHOT-0",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
     "zone.js": "0.9.1"
