--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "4.0.5-3-SNAPSHOT",
+  "version": "4.0.5",
   "description": "An implementation of nvD3 for Ontimize Web",
   "scripts": {
     "clean": "o-ngx-lib-builder clean",
@@ -36,7 +36,7 @@
     "moment": "2.22.2"
   },
   "devDependencies": {
-    "ontimize-web-ngx": "4.0.7",
+    "ontimize-web-ngx": "4.1.3",
     "ontimize-web-ngx-library-tools": "4.0.2",
     "@angular/flex-layout": "6.0.0-beta.18",
     "@angular/material": "6.4.7",
