--- a/package.json
+++ b/package.json
@@ -16,63 +16,52 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.8",
-    "@angular/cdk": "8.2.3",
-    "@angular/common": "8.2.8",
-    "@angular/compiler": "8.2.8",
-    "@angular/core": "8.2.8",
-    "@angular/flex-layout": "8.0.0-beta.27",
-    "@angular/forms": "8.2.8",
-    "@angular/material": "8.2.3",
-    "@angular/material-moment-adapter": "8.2.3",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.8",
-    "@angular/platform-server": "8.2.8",
-    "@angular/router": "8.2.8",
-    "@angular/upgrade": "8.2.8",
-    "angular2-highlight-js": "5.0.1",
-    "classlist.js": "^1.1.20150312",
-    "core-js": "3.6.4",
-    "intl": "^1.2.5",
-    "ontimize-web-ngx": "8.0.0",
-    "ontimize-web-ngx-charts": "8.0.0",
-    "ontimize-web-ngx-theming": "4.0.2",
-    "reflect-metadata": "0.1.12",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "reflect-metadata": "0.1.12",
-    "ontimize-web-ngx": "8.0.0",
-    "ontimize-web-ngx-charts": "8.0.0",
-    "ontimize-web-ngx-theming": "4.0.2",
-    "classlist.js": "^1.1.20150312",
-    "intl": "^1.2.5",
-    "web-animations-js": "^2.3.2",
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/flex-layout": "~8.0.0-beta.27",
+    "@angular/forms": "~8.2.14",
+    "@angular/material": "~8.2.3",
+    "@angular/material-moment-adapter": "^8.2.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/platform-server": "~8.2.14",
+    "@angular/router": "~8.2.14",
+    "@angular/upgrade": "~8.2.14",
     "angular2-highlight-js": "^8.0.1",
-    "highlight.js": "^9.5.0"
+    "hammerjs": "^2.0.8",
+    "highlight.js": "^9.5.0",
+    "ontimize-web-ngx": "8.3.0",
+    "ontimize-web-ngx-charts": "8.0.0",
+    "ontimize-web-ngx-theming": "8.0.1",
+    "rxjs": "~6.4.0",
+    "tslib": "~1.10.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/cli": "8.3.26",
+    "@angular/cli": "~8.3.25",
     "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
     "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "acorn": "5.7.4",
-    "codelyzer": "5.1.0",
-    "hammerjs": "^2.0.8",
-    "handlebars": "4.7.3",
-    "jasmine-core": "^3.5.0",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "minimist": "1.2.2",
-    "moment": "^2.22.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "socket.io": ">=2.4.0",
+    "ini": ">=1.3.6",
+    "webpack-subresource-integrity": ">=1.5.1"
   }
 }
