--- a/angular.json
+++ b/angular.json
@@ -59,7 +59,12 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ontimize-web-ngx-quickstart-charts:build"
+            "browserTarget": "ontimize-web-ngx-quickstart-charts:build",
+            "sourceMap": {
+              "scripts": true,
+              "styles": false,
+              "vendor": true
+            }
           },
           "configurations": {
             "production": {
