--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
     "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx": "file:ontimize-web-ngx-8.5.0-SNAPSHOT-0.tgz",
+    "ontimize-web-ngx": "file:ontimize-web-ngx-8.5.1.tgz",
     "ontimize-web-ngx-nvd3": "8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
