--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "8.0.0",
+  "version": "8.0.1",
   "description": "An implementation of nvD3 for Ontimize Web",
   "keywords": [
     "angular",
@@ -42,7 +42,7 @@
     "hammerjs": "~2.0.8",
     "nvd3": "1.8.6",
     "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx": "8.0.0",
+    "ontimize-web-ngx": "8.5.9",
     "ontimize-web-ngx-nvd3": "8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
@@ -68,12 +68,13 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "~1.4.0",
-    "ng-packagr": "4.1.0",
+    "ng-packagr": "5.7.1",
     "protractor": "~5.4.0",
     "scss-bundle": "3.1.1",
     "ts-node": "~7.0.0",
     "tsickle": "~0.37.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "xmlhttprequest-ssl": ">=1.6.2"
   }
 }
