--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "8.1.0-SNAPSHOT-0",
+  "version": "8.1.0-SNAPSHOT-2",
   "description": "An implementation of nvD3 for Ontimize Web",
   "keywords": [
     "angular",
@@ -20,7 +20,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && scss-bundle -c scss-bundle-ontimize-charts.config.json",
+    "build": "ng build && scss-bundle -c scss-bundle-ontimize-charts.config.json && npm run copy-files",
+    "copy-files": "copyfiles -u 3 ./projects/ontimize-web-ngx-charts/assets/chart_animation.json ./dist/assets && echo '----¡Assets copied!----'  ",
     "test": "ng test --code-coverage",
     "test-ci": "ng test --no-watch --code-coverage --browsers ChromeHeadless",
     "lint": "ng lint",
@@ -40,10 +41,13 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "d3": "3.5.17",
+    "dom-to-image": "^2.6.0",
     "hammerjs": "~2.0.8",
+    "lottie-web": "^5.10.0",
+    "ngx-lottie": "7.0.4",
     "nvd3": "1.8.6",
     "nvd3-extra": "1.0.0",
-    "ontimize-web-ngx": "8.5.9",
+    "ontimize-web-ngx": "8.9.0",
     "ontimize-web-ngx-nvd3": "8.0.0",
     "rxjs": "~6.4.0",
     "tslib": "~1.10.0",
