--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -4,7 +4,7 @@ name: Build Release
 on:
   pull_request:
     types: [closed]
-    branches: [master]
+    branches: ['main', 'master']
     paths: ['projects/ontimize-web-ngx-charts/**']
   workflow_dispatch:
     inputs:
@@ -17,6 +17,7 @@ env:
   NPM_REGISTRY: https://registry.npmjs.org/
   CI_EMAIL: ontimize-web@imatia.com
   CI_USERNAME: ontimize-web
+  DEVELOP_BRANCH: 8.x.x
 
 jobs:
   build:
@@ -33,7 +34,6 @@ jobs:
         with:
           ref: ${{ env.BASELINE_BRANCH }}
           fetch-depth: 0
-          persist-credentials: false
 
       - name: 'Cache node modules'
         uses: actions/cache@v3
@@ -101,7 +101,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           version=${{ steps.project.outputs.version }}
-          gh pr create -B 8.x.x -H sync/release-$version-to-develop --title "Sync release $version to develop" --body "Automated pull request for synchronizing released version into develop branch"
+          gh pr create -B ${{ env.DEVELOP_BRANCH }} -H sync/release-$version-to-develop --title "Sync release $version to develop" --body "Automated pull request for synchronizing released version into develop branch"
 
 
 
