--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-quickstart-charts",
-  "version": "8.1.0",
+  "version": "15.0.0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
@@ -11,57 +11,60 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "production": "ng build --prod=true --baseHref=/ontimize-web-ngx-quickstart-charts",
-    "production-aot-server": "ng build --prod=true --baseHref=/ontimizeweb/v8/charts/"
+    "watch": "ng build --watch --configuration development",
+    "production": "ng build --base-href=/ontimize-web-ngx-quickstart-charts",
+    "production-aot-server": "ng build  --base-href=/ontimizeweb/v8/charts/"
   },
   "private": true,
+  "engines": {
+    "node": "18.10.0"
+  },
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/flex-layout": "~8.0.0-beta.27",
-    "@angular/forms": "~8.2.14",
-    "@angular/material": "~8.2.3",
-    "@angular/material-moment-adapter": "^8.2.3",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/platform-server": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@angular/upgrade": "~8.2.14",
-    "angular2-highlight-js": "^8.0.1",
-    "hammerjs": "^2.0.8",
-    "highlight.js": "^9.5.0",
-    "ontimize-web-ngx": "8.5.0",
-    "ontimize-web-ngx-theming": "8.1.0",
-    "ontimize-web-ngx-charts": "8.0.0",
-    "rxjs": "~6.4.0",
-    "tslib": "~1.10.0",
-    "zone.js": "~0.9.1"
+    "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^15.2.9",
+    "@angular/compiler": "^15.2.9",
+    "@angular/core": "^15.2.9",
+    "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/forms": "^15.2.9",
+    "@angular/material": "^15.2.9",
+    "@angular/material-moment-adapter": "^15.2.9",
+    "@angular/platform-browser": "^15.2.9",
+    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular/platform-server": "^15.2.9",
+    "@angular/router": "^15.2.9",
+    "@angular/upgrade": "^15.2.9",
+    "highlight.js": "^11.7.0",
+    "ngx-highlightjs": "^4.1.0-beta",
+    "nvd3": "^1.8.6",
+    "ontimize-web-ngx": "15.0.0-beta.1",
+    "ontimize-web-ngx-charts": "15.0.0-beta.0",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.25",
-    "@angular/cli": "~8.3.25",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "socket.io": ">=2.4.0",
-    "ini": ">=1.3.6",
-    "webpack-subresource-integrity": ">=1.5.1"
+    "@angular-devkit/build-angular": "^15.2.9",
+    "@angular/cli": "^15.2.9",
+    "@angular/compiler-cli": "^15.2.9",
+    "@angular/language-service": "^15.2.9",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^12.11.1",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "ajv": "^7.2.4",
+    "codelyzer": "^6.0.0",
+    "eslint": "^8.28.0",
+    "jasmine-core": "~4.5.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "ts-node": "~8.3.0",
+    "typescript": "~4.9.5"
   }
 }
