--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
   "compilerOptions": {
     "downlevelIteration": true,
     "importHelpers": true,
-    "target": "es5",
-    "module": "esnext",
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2022",
+    "module": "es2020",
     "moduleResolution": "node",
     "outDir": "./dist",
     "baseUrl": "src",
     "sourceMap": true,
     "declaration": false,
-    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "typeRoots": [
       "node_modules/@types"
@@ -18,6 +18,7 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false
   }
 }
