--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "highlight.js": "^11.7.0",
     "moment": "^2.18.1",
     "ngx-highlightjs": "^8.0.0",
-    "ontimize-web-ngx": "15.0.0-beta.4",
-    "ontimize-web-ngx-charts": "15.0.0-beta.1",
+    "ontimize-web-ngx": "15.0.0",
+    "ontimize-web-ngx-charts": "15.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
