--- a/.github/workflows/release-preview.yml
+++ b/.github/workflows/release-preview.yml
@@ -8,7 +8,7 @@ concurrency:
 on:
   pull_request:
     types: [labeled, synchronize]
-    branches: ['main', 'master']
+    branches: ['main.8.x']
     paths: ['projects/ontimize-web-ngx-charts/**']
 
 jobs:
