--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-quickstart-charts",
-  "version": "8.2.0-SNAPSHOT",
+  "version": "8.2.0-SNAPSHOT-0",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
