--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "production": "ng build --prod=true --baseHref=/v8/charts",
+    "production": "ng build --prod=true --baseHref=/v8/charts/",
     "production-aot-server": "ng build --prod=true --baseHref=/ontimizeweb/v8/charts/"
   },
   "private": true,
