--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ontimize-web-ngx-charts",
-  "version": "15.2.0-SNAPSHOT-0",
+  "version": "15.2.0-JSONAPI-SNAPSHOT-0",
   "description": "An implementation of ngx-charts for Ontimize Web",
   "keywords": [
     "angular",
@@ -42,7 +42,7 @@
     "@angular/router": "^15.2.9",
     "@swimlane/ngx-charts": "^20.4.0",
     "dom-to-image": "^2.6.0",
-    "ontimize-web-ngx": "15.0.0",
+    "ontimize-web-ngx": "file:./ontimize-web-ngx-15.1.0-JSONAPI-SNAPSHOT-5.tgz",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
