--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@angular/router": "^15.2.9",
     "@swimlane/ngx-charts": "^20.4.0",
     "dom-to-image": "^2.6.0",
-    "ontimize-web-ngx": "file:./ontimize-web-ngx-15.1.0-JSONAPI-SNAPSHOT-5.tgz",
+    "ontimize-web-ngx": "15.1.0-JSONAPI-SNAPSHOT-6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
