--- a/projects/ontimize-web-ngx-charts/package.json
+++ b/projects/ontimize-web-ngx-charts/package.json
@@ -31,6 +31,6 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "ontimize-web-ngx": "file:./ontimize-web-ngx-15.1.0-JSONAPI-SNAPSHOT-5.tgz"
+    "ontimize-web-ngx": "15.1.0-JSONAPI-SNAPSHOT-6"
   }
 }
